# select-mirror

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  findings-about-claude-sandboxing.md
.claude/: settings.json
.claude/commands/: openspec-handoff.md
.claude/skills/openspec-handoff/: SKILL.md
.github/: dependabot.yml
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-17-early-exit.md  2026-04-17-rust-select-mirror.md  2026-05-03-cache-selected-mirror.md  2026-05-04-aware-sandbox.md  2026-05-04-bump-ureq-to-v3.md
docs/superpowers/specs/: 2026-04-17-early-exit-design.md  2026-04-17-rust-select-mirror-design.md
openspec/: config.yaml
openspec/changes/2026-05-04-aware-sandbox/: design.md  tasks.md
openspec/changes/add-release-workflow/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-03-cache-selected-mirror/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-add-release-workflow/: .openspec.yaml  brainstorm.md  design.md  plan.md  tasks.md
openspec/changes/archive/2026-05-04-aware-sandbox/: .openspec.yaml  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-bump-ureq-to-v3/: .openspec.yaml  (+3 more)
openspec/changes/update-actions-node24/: brainstorm.md  design.md  tasks.md
openspec/schemas/superpowers-bridge/: README.md  README.zh-TW.md  schema.yaml
openspec/schemas/superpowers-sdd/: schema.yaml
openspec/specs/aware-sandbox/: spec.md
openspec/specs/mirror-selection-cache/: spec.md
openspec/specs/release-build/: spec.md
reference/: select-mirror.sh
src/: main.rs
tests/: cli.rs
(+11 files in other folders)
