[package]
name = "select-mirror"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "select-mirror"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
