[package]
name = "select-mirror"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "select-mirror"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
